Исправлены недочеты в классе BotUpdatesListener